syntax = "proto3";

package proto;

option go_package = "proto/commonpb";

message Error {
    int32 code = 1;
    string msg = 2;
}

message ValueMeta {
    uint64 version = 1;
    bool write_intent = 2;
    uint64 max_read_version = 3;
}

message Value {
    ValueMeta Meta = 1;
    bytes val = 2;
}

message ReadOption {
    uint64 version = 1;
    bool exact_read_version = 2;
    bool not_update_timestamp_cache = 3;
    bool get_max_read_version = 4;
}

message WriteOption {
    bool clear_write_intent = 1;
    bool remove_version = 2;
}
